--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>Добро пожаловать</h1>
-<a href="/chat_bot">Начать общение с ботом</a>
+<a href="/chat">Начать общение с ботом</a>
 </body>
 </html>
